# ghcicabal

./: LICENSE  README.md  default.nix  flake.nix  ghcicabal.cabal  hie.yaml
.github/workflows/: ci.yml
src/: Common.hs  buildcabal.hs  ghcicabal.hs
