cabal-version:  2.2
name:           ghcicabal
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, 2019-2021
copyright:      Christian Hoener zu Siederdissen, 2019-2021
homepage:       https://github.com/choener/ghcicabal
bug-reports:    https://github.com/choener/ghcicabal/issues
maintainer:     choener@gmail.com
category:       Distribution
license:        GPL-3.0-or-later
license-file:   LICENSE
build-type:     Simple
stability:      experimental
tested-with:    GHC == 8.8.4
synopsis:       todo
description:
                todo



Extra-Source-Files:
  changelog.md
  README.md



common deps
  build-depends: base                   >= 4.7
               , Cabal                  >= 2.4
               , containers             >= 0.6
               , filemanip              >= 0.3
               , filepath               >= 1.4
               , optparse-applicative   >= 0.14
               , process                >= 1.6
               , hpack
               --
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , ConstraintKinds
                    , DataKinds
                    , DeriveDataTypeable
                    , DeriveFunctor
                    , DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , LambdaCase
                    , MultiParamTypeClasses
                    , MultiWayIf
                    , NamedFieldPuns
                    , NumDecimals
                    , OverloadedStrings
                    , OverloadedLabels
                    , PartialTypeSignatures
                    , PolyKinds
                    , QuasiQuotes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TypeApplications
                    , TypeFamilies
                    , TupleSections
                    , TypeOperators
                    , UndecidableInstances
                    , UnicodeSyntax
                    , ViewPatterns
  ghc-options:
    -O2
    -funbox-strict-fields



executable ghcicabal
  import: deps
  build-depends: base
               --
  hs-source-dirs:
    src
  main-is:
    ghcicabal.hs
  other-modules:
    Common
  ghc-options:
    -rtsopts



executable buildcabal
  import: deps
  build-depends: base
               --
  hs-source-dirs:
    src
  main-is:
    buildcabal.hs
  other-modules:
    Common
  ghc-options:
    -rtsopts



source-repository head
  type: git
  location: git://github.com/choener/ghcicabal.git

